# yolov8_infer_segmentation

./: CMakeLists.txt  README.md  main.cpp  utils.h  weights
